Improve search results for bigbed files -- select largest matching feature